Bug 437494 - Reports lost connection to outgoing mail server; tcp dump shows client sending invalid data (last [LF] or [CRLF] or .[CRLF] in final [CRLF].[CRLF] sequence is not passed to SMTP server)